tests/fixtures/effect-compiler/errors/EFX3102.effect
CCEffect %{
  techniques:
  - passes:
    - vert: vs:test
      frag: fs:test
      depthStencilState:
        stencilRefFront: 1
        stencilRefBack: 2
}%

CCProgram vs %{
  precision mediump float;
  vec4 test () {}
}%

CCProgram fs %{
  precision mediump float;
  vec4 test () {}
}%
